# Template

./: .gitignore  .gitmodules  .luaurc  Cargo.toml  README.md  aftman.toml  bun.lockb  index.html  luneweb.toml  package.json  rokit.toml
.lune/: setup.luau
assets/js/: init.js
src/: actions.luau  button.js  components.luau  event_loop.luau  init.js  init.luau  locations.luau  webview.luau  world.luau
src-luneweb/: Cargo.toml
src-luneweb/bundler.d/: assets.luau
src-luneweb/src/: bundle.rs  console.rs  main.rs  temp.rs
src/app/: scope.luau  ui.luau
web/: index.ts
