[package]
name = "luau_app"
version = "0.1.0"
edition = "2021"

[dependencies.luneweb]
git = "https://github.com/LuneWeb/LuneWeb-rs"
tag = "v0.2.1"

[dependencies.lune-std]
git = "https://github.com/LuneWeb/Lune"
rev = "e375af1f1a9da052fd05b570ffe32ea23613d6fd"
package = "lune-std"

[dependencies]
mlua-luau-scheduler = "0.0.2"
mlua = { version = "0.9.8", features = ["luau"] }
tokio = { version = "1.37.0", features = ["macros"] }
include_dir = "0.7.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["wincon", "winuser"] }
