[package]
name = "luau_app"
version = "0.1.0"
edition = "2021"

[dependencies.luneweb]
git = "https://github.com/LuneWeb/LuneWeb-rs"
rev = "da5f2a65ab8ac53b759729da45098e0e6d41646c"
# tag = "v0.2.3"

[dependencies.lune-std]
git = "https://github.com/LuneWeb/Lune"
rev = "96570554fd6bb5ae6f483fea29337822ca10b0c2"
package = "lune-std"

[dependencies.mlua-luau-scheduler]
git = "https://github.com/LuneWeb/Lune"
rev = "e1d5448e9ad01a65afe5c702e4ca0af420edd0b3"
package = "mlua-luau-scheduler"

[dependencies]
mlua = { version = "0.9.8", features = ["luau"] }
tokio = { version = "1.37.0", features = ["macros"] }
include_dir = "0.7.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["wincon", "winuser"] }
